tests/language_tests/pass/0130_array_aliasing.ee
fn main() {
    let first = [1, 2];
    let second = first;
    second[0] = 99;
    println(first[0]);
    println(second[0]);
}
