tests/language_tests/fail/0093_array_nested_index_out_of_bounds.ee
fn main() {
    let values = [[1], [2]];
    println(values[1][1]);
}
